--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "express-session": "^1.17.2",
     "mongoose": "^6.1.7",
     "passport": "^0.5.2",
-    "passport-discord": "https://github.com/tonestrike/passport-discord.git",
+    "passport-discord": "^0.1.4",
     "passport-oauth2": "^1.6.1",
     "passport-oauth2-refresh": "^2.1.0"
   }
