--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   },
   "license": "MIT",
   "dependencies": {
+    "cookie-session": "^2.0.0",
     "dotenv": "^14.2.0",
     "ejs": "^3.1.6",
     "ejs-lint": "^1.2.1",
     "express": "^4.17.2",
-    "express-session": "^1.17.2",
     "mongoose": "^6.1.7",
     "passport": "^0.5.2",
     "passport-discord": "^0.1.4",
