--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "vocal",
-  "version": "1.0.0",
-  "main": "index.mjs",
-  "scripts": {
-    "start": "nodemon ."
-  },
-  "license": "MIT",
-  "dependencies": {
-    "cookie-session": "^2.0.0",
-    "dotenv": "^14.2.0",
-    "ejs": "^3.1.6",
-    "ejs-lint": "^1.2.1",
-    "express": "^4.17.2",
-    "express-session": "^1.17.2",
-    "mongoose": "^6.1.7",
-    "passport": "^0.5.2",
-    "passport-discord": "^0.1.4",
-    "passport-oauth2": "^1.6.1",
-    "passport-oauth2-refresh": "^2.1.0"
-  }
+	"name": "vocal",
+	"private": true,
+	"version": "0.0.1",
+	"type": "module",
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"prepare": "svelte-kit sync || echo ''",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^4.0.0",
+		"@sveltejs/kit": "^2.16.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.0",
+		"typescript": "^5.0.0",
+		"vite": "^6.0.0"
+	}
 }
