--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.16",
 		"autoprefixer": "^10.4.20",
+		"bits-ui": "0.22.0",
 		"clsx": "^2.1.1",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
@@ -30,6 +31,8 @@
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.0.9",
+		"lucide-svelte": "^0.477.0",
+		"mongoose": "^8.12.1",
 		"tailwindcss": "^4.0.9"
 	}
 }
