--- a/.env.TEMPLATE
+++ b/.env.TEMPLATE
@@ -1,3 +1,11 @@
 NODE_ENV=development
 
+# Database
 MONGO_URI=your_mongo_uri
+
+# Discord Authentication
+DISCORD_CLIENT_ID=123456789123456789
+DISCORD_CLIENT_SECRET=shhh
+DISCORD_REDIRECT_URI=do_not_use_localhost # Localhost is automatically used for development envrionments. Do not use localhost here, put an actual URI.
+
+PORT=5173
