Add Discord authentication

--- a/.env.TEMPLATE
+++ b/.env.TEMPLATE
@@ -7,5 +7,6 @@ MONGO_URI=your_mongo_uri
 DISCORD_CLIENT_ID=123456789123456789
 DISCORD_CLIENT_SECRET=shhh
 DISCORD_REDIRECT_URI=do_not_use_localhost # Localhost is automatically used for development envrionments. Do not use localhost here, put an actual URI.
+JWT_SECRET=shhh # `openssl rand -base64 60`
 
 PORT=5173
