--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.0.9",
+		"@types/jsonwebtoken": "^9.0.9",
+		"jsonwebtoken": "^9.0.2",
 		"lucide-svelte": "^0.477.0",
 		"mongoose": "^8.12.1",
 		"tailwindcss": "^4.0.9"
