--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-svelte": "^0.477.0",
     "mongoose": "^8.12.1",
+    "svelte-twemojify": "^2.1.1",
     "tailwindcss": "^4.0.9"
   }
 }
