--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tailwindcss/vite": "^4.0.9",
     "@types/jsonwebtoken": "^9.0.9",
     "jsonwebtoken": "^9.0.2",
+    "libsignal-protocol": "^1.3.15",
     "lucide-svelte": "^0.477.0",
     "mongoose": "^8.12.1",
     "svelte-twemojify": "^2.1.1",
