--- a/package.json
+++ b/package.json
@@ -1,40 +1,43 @@
 {
-	"name": "vocal",
-	"private": true,
-	"version": "0.0.1",
-	"type": "module",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^4.0.0",
-		"@sveltejs/kit": "^2.16.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"@tailwindcss/container-queries": "^0.1.1",
-		"@tailwindcss/forms": "^0.5.10",
-		"@tailwindcss/typography": "^0.5.16",
-		"autoprefixer": "^10.4.20",
-		"bits-ui": "0.22.0",
-		"clsx": "^2.1.1",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
-		"tailwind-merge": "^3.0.2",
-		"tailwind-variants": "^0.3.1",
-		"tailwindcss": "^3.4.17",
-		"typescript": "^5.0.0",
-		"vite": "^6.0.0"
-	},
-	"dependencies": {
-		"@tailwindcss/vite": "^4.0.9",
-		"@types/jsonwebtoken": "^9.0.9",
-		"jsonwebtoken": "^9.0.2",
-		"lucide-svelte": "^0.477.0",
-		"mongoose": "^8.12.1",
-		"tailwindcss": "^4.0.9"
-	}
+  "name": "vocal",
+  "private": true,
+  "version": "0.0.1",
+  "type": "module",
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "prepare": "svelte-kit sync || echo ''",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-auto": "^4.0.0",
+    "@sveltejs/kit": "^2.16.0",
+    "@sveltejs/vite-plugin-svelte": "^5.0.0",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "autoprefixer": "^10.4.20",
+    "bits-ui": "0.22.0",
+    "clsx": "^2.1.1",
+    "svelte": "^5.0.0",
+    "svelte-check": "^4.0.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwind-variants": "^0.3.1",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.0.0",
+    "vite": "^6.0.0"
+  },
+  "dependencies": {
+    "@icons-pack/svelte-simple-icons": "^5.0.0",
+    "@tailwindcss/vite": "^4.0.9",
+    "@types/jsonwebtoken": "^9.0.9",
+    "jsonwebtoken": "^9.0.2",
+    "libsignal-protocol": "^1.3.15",
+    "lucide-svelte": "^0.477.0",
+    "mongoose": "^8.12.1",
+    "svelte-twemojify": "^2.1.1",
+    "tailwindcss": "^4.0.9"
+  }
 }
