added drizzle w/ postgres for testing, added fuzzy search script, CC BY-NC license, and locked profile component (empty)

--- a/.env.TEMPLATE
+++ b/.env.TEMPLATE
@@ -1,7 +1,10 @@
 NODE_ENV=development
 
-# Database
+# Database (NoSQL)
 MONGO_URI=your_mongo_uri
+
+# Drizzle ORM
+DATABASE_URL=your_postgres_url
 
 # Discord Authentication
 DISCORD_CLIENT_ID=123456789123456789
