--- a/.env.TEMPLATE
+++ b/.env.TEMPLATE
@@ -9,7 +9,7 @@ DATABASE_URL=your_postgres_url
 # Discord Authentication
 DISCORD_CLIENT_ID=123456789123456789
 DISCORD_CLIENT_SECRET=shhh
-DISCORD_REDIRECT_URI=do_not_use_localhost # Localhost is automatically used for development envrionments. Do not use localhost here, put an actual URI.
+DISCORD_REDIRECT_URI=do_not_use_localhost # Localhost is automatically used for development environments. Do not use localhost here, put an actual URI.
 JWT_SECRET=shhh # `openssl rand -base64 60`
 
 PORT=5173
