--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/pg": "^8.11.11",
     "autoprefixer": "^10.4.20",
     "bits-ui": "0.22.0",
     "clsx": "^2.1.1",
+    "drizzle-kit": "^0.30.5",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "tailwind-merge": "^3.0.2",
     "tailwind-variants": "^0.3.1",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.19.3",
     "typescript": "^5.0.0",
     "vite": "^6.0.0"
   },
@@ -33,10 +36,12 @@
     "@icons-pack/svelte-simple-icons": "^5.0.0",
     "@tailwindcss/vite": "^4.0.9",
     "@types/jsonwebtoken": "^9.0.9",
+    "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
     "libsignal-protocol": "^1.3.15",
     "lucide-svelte": "^0.477.0",
     "mongoose": "^8.12.1",
+    "pg": "^8.14.0",
     "svelte-twemojify": "^2.1.1",
     "tailwindcss": "^4.0.9"
   }
