--- a/package.json
+++ b/package.json
@@ -12,37 +12,38 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
+    "@lucide/svelte": "^0.482.0",
     "@sveltejs/adapter-auto": "^4.0.0",
-    "@sveltejs/kit": "^2.16.0",
-    "@sveltejs/vite-plugin-svelte": "^5.0.0",
+    "@sveltejs/kit": "^2.48.0",
+    "@sveltejs/vite-plugin-svelte": "^5.1.1",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/pg": "^8.11.11",
-    "autoprefixer": "^10.4.20",
-    "bits-ui": "0.22.0",
+    "@tailwindcss/typography": "^0.5.19",
+    "@types/pg": "^8.15.5",
+    "autoprefixer": "^10.4.21",
+    "bits-ui": "^1.8.0",
     "clsx": "^2.1.1",
-    "drizzle-kit": "^0.30.5",
-    "svelte": "^5.0.0",
-    "svelte-check": "^4.0.0",
-    "tailwind-merge": "^3.0.2",
+    "drizzle-kit": "^0.30.6",
+    "svelte": "^5.42.2",
+    "svelte-check": "^4.3.3",
+    "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^0.3.1",
-    "tailwindcss": "^3.4.17",
-    "tsx": "^4.19.3",
-    "typescript": "^5.0.0",
-    "vite": "^6.0.0"
+    "tailwindcss": "^3.4.18",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3",
+    "vite": "^6.4.1"
   },
   "dependencies": {
     "@icons-pack/svelte-simple-icons": "^5.0.0",
-    "@tailwindcss/vite": "^4.0.9",
-    "@types/jsonwebtoken": "^9.0.9",
+    "@tailwindcss/vite": "^4.1.16",
+    "@types/jsonwebtoken": "^9.0.10",
     "caniuse-lite": "^1.0.30001751",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.6.1",
     "jsonwebtoken": "^9.0.2",
     "libsignal-protocol": "^1.3.15",
     "lucide-svelte": "^0.477.0",
-    "mongoose": "^8.12.1",
-    "pg": "^8.14.0",
+    "mongoose": "^8.19.2",
+    "pg": "^8.16.3",
     "svelte-twemojify": "^2.1.1"
   }
 }
