--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "libsignal-protocol": "^1.3.15",
     "lucide-svelte": "^0.477.0",
     "mongoose": "^8.19.2",
+    "natural": "^8.1.0",
     "pg": "^8.16.3",
     "svelte-twemojify": "^2.1.1"
   }
